# Lab3

./: CMakeLists.txt  Temperature.cc  Temperature.h  Test.cc  Test.h  main.cpp
